[gd_scene load_steps=6 format=3 uid="uid://1c1bqt4usdg0"]

[ext_resource type="Script" path="res://Demo2/demo_2_world.gd" id="1_1agkf"]
[ext_resource type="Script" path="res://Demo2/demo2_input_manager.gd" id="2_elibb"]
[ext_resource type="PackedScene" uid="uid://bkr04a16d6j3g" path="res://Demo2/demo_2_player_client.tscn" id="3_ar4eh"]
[ext_resource type="Script" path="res://Demo2/network_layer.gd" id="4_6onnb"]
[ext_resource type="PackedScene" uid="uid://bm2kxjrujetg7" path="res://Demo2/demo_2_player_server.tscn" id="5_gqcfy"]

[node name="Demo2_World" type="Node2D"]
script = ExtResource("1_1agkf")

[node name="Input_Manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_elibb")
input_delay = 7.2

[node name="Network_Layer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_6onnb")

[node name="Client_View" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Client_View"]

[node name="Polygon2D" type="Polygon2D" parent="Client_View/StaticBody2D"]
color = Color(0, 0.863966, 0.658708, 1)
polygon = PackedVector2Array(0, 648, 0, 320, 576, 320, 576, 648, 568, 640, 568, 328, 8, 328, 8, 640)

[node name="Polygon2D2" type="Polygon2D" parent="Client_View/StaticBody2D"]
color = Color(0, 0.862745, 0.658824, 1)
polygon = PackedVector2Array(8, 640, 568, 640, 576, 648, 0, 648)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Client_View/StaticBody2D"]
polygon = PackedVector2Array(0, 648, 0, 320, 576, 320, 576, 648, 568, 640, 568, 328, 8, 328, 8, 640)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Client_View/StaticBody2D"]
polygon = PackedVector2Array(0, 648, 8, 640, 568, 640, 576, 648)

[node name="Demo2_Player_Client" parent="Client_View" instance=ExtResource("3_ar4eh")]
unique_name_in_owner = true
position = Vector2(288, 480)

[node name="Server_View" type="Node2D" parent="."]
position = Vector2(576, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="Server_View"]

[node name="Polygon2D" type="Polygon2D" parent="Server_View/StaticBody2D"]
color = Color(1, 0.501689, 0.617904, 1)
polygon = PackedVector2Array(0, 648, 0, 320, 576, 320, 576, 648, 568, 640, 568, 328, 8, 328, 8, 640)

[node name="Polygon2D2" type="Polygon2D" parent="Server_View/StaticBody2D"]
color = Color(1, 0.501961, 0.619608, 1)
polygon = PackedVector2Array(8, 640, 568, 640, 576, 648, 0, 648)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Server_View/StaticBody2D"]
polygon = PackedVector2Array(0, 648, 0, 320, 576, 320, 576, 648, 568, 640, 568, 328, 8, 328, 8, 640)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Server_View/StaticBody2D"]
polygon = PackedVector2Array(0, 648, 8, 640, 568, 640, 576, 648)

[node name="Demo2_Player_Server" parent="Server_View" instance=ExtResource("5_gqcfy")]
unique_name_in_owner = true
position = Vector2(288, 480)
